# payment-api-teamkode

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_CERTIFICADOS.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  readmeMLTS.md  test_ca_ssl_empresa.sh
payment_kode_api/app/: config.py  database.py  dependencies.py  error_handlers.py  main.py
payment_kode_api/app/api/routes/: __init__.py  auth_gateway.py  clientes.py  empresas.py  encryption_admin.py  payments.py  refunds.py  tokenization.py  upload_certificados.py  webhooks.py
payment_kode_api/app/bugs_scripts/: test_redis.py
payment_kode_api/app/core/: __init__.py  config.py
payment_kode_api/app/database/: __init__.py  customer_repository.py  customers.py  customers_management  database.py  payment_operations.py  redis_client.py  repositories.py  supabase_client.py  supabase_storage.py
payment_kode_api/app/database/migrations/: add_decryption_key_to_empresas_keys.sql  add_empresas_keys.sql  improve_encryption_system.sql
payment_kode_api/app/interfaces/: __init__.py
payment_kode_api/app/models/: __init__.py  database_models.py  schemas.py
payment_kode_api/app/routes/: __init__.py  empresas.py  payments.py  webhooks.py
payment_kode_api/app/security/: __init__.py  auth.py  crypto.py
payment_kode_api/app/services/: __init__.py  asaas_client.py  card_tokenization_service.py  company_encryption.py  config_service.py  rede_client.py  sicredi_client.py  validators.py  webhook_services.py
payment_kode_api/app/services/gateways/: asaas_client.py  payment_payload_mapper.py  rede_client.py  sicredi_client.py
payment_kode_api/app/utilities/: __init__.py  cert_utils.py  constants.py  helpers.py  logging_config.py
payment_kode_api/app/workers/: __init__.py  tasks.py  worker.py
payment_kode_api/tests/: test_payments.py  test_webhooks.py
supabase/migrations/: README.md  TEST_EXAMPLES.sh  add_gateway_specific_pix_keys.sql  add_gateway_tracking_to_payments.sql
