[project]
name = "payment-kode-api"
version = "0.0.1"
description = "API com Fallback com as melhores taxas de mercado"
authors = [
    { name = "Team Kode" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "fastapi>=0.115.6,<0.116.0",
    "uvicorn>=0.27.0,<0.28.0",  # 🔹 Corrigida a versão do uvicorn
    "supabase>=2.11.0,<3.0.0",
    "redis>=5.2.1,<6.0.0",
    "celery>=5.4.0,<6.0.0",
    "pydantic>=2.10.5,<3.0.0",  # Mantido para validação
    "pydantic-settings>=2.0.0,<3.0.0",  # Necessário para BaseSettings
    "httpx>=0.27.0,<0.30.0",  # 🔹 Corrigida a versão do httpx
    "loguru>=0.7.3,<0.8.0",
    "aiofiles>=24.1.0,<25.0.0",
    "cryptography>=41.0.7,<42.0.0"  # 🔹 Nova dependência para criptografia RSA
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"
coverage = "^7.6.10"

[tool.poetry]
packages = [
    { include = "payment_kode_api" }
]
