[tool.poetry]
name = "payment-kode-api"
version = "0.0.1"
description = "API com Fallback com as melhores taxas de mercado"
authors = ["Team Kode"]
license = "MIT"
readme = "README.md"
packages = [{ include = "payment_kode_api" }]

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0"

# Framework e servidor ASGI
fastapi = "^0.115.12"  # Última versão estável em 23 de março de 2025
uvicorn = "^0.34.1"    # Última versão estável

# Cliente HTTP assíncrono
httpx = "^0.28.0"      # Última versão estável

# Integração com Supabase
supabase = "^2.15.0"   # Última versão estável em 26 de março de 2025

# Cliente Redis
redis = "^5.2.1"       # Última versão estável

# Fila de tarefas assíncronas
celery = "^5.5.1"      # Última versão estável

# Validação de dados e configurações
pydantic = "^2.11.1"   # Última versão estável em 28 de março de 2025
pydantic-settings = "^2.9.1"  # Última versão estável em 18 de abril de 2025

# Suporte a arquivos assíncronos
aiofiles = "^24.1.0"   # Última versão estável

# Criptografia e certificados
cryptography = "^44.0.2"  # Última versão estável em 1 de março de 2025
certifi = "^2025.1.31"    # Última versão estável em 31 de janeiro de 2025

# Suporte a multipart/form-data
python-multipart = "^0.0.20"  # Última versão estável em 16 de dezembro de 2024

# Logging estruturado
loguru = "^0.7.3"       # Última versão estável em 6 de dezembro de 2024

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
